# aiogram_template

./: .gitignore  README.md  alembic.ini  bot.service  example.env  main.py  pyproject.toml
aiogram_template/: __init__.py  settings.py
aiogram_template/api/: __init__.py  setup.py
aiogram_template/api/middlewares/: __init__.py  database.py
aiogram_template/api/routers/: __init__.py  telegram.py
aiogram_template/database/: __init__.py  connect.py
aiogram_template/database/dao/: __init__.py  base.py
aiogram_template/database/migrations/: env.py
aiogram_template/telegram/: __init__.py  setup.py
aiogram_template/telegram/dialogs/: __init__.py  router.py
aiogram_template/telegram/dialogs/hello_world/: __init__.py  dialog.py  state.py
aiogram_template/telegram/dialogs/hello_world/windows/: __init__.py  hello_world.py
aiogram_template/telegram/filters/: __init__.py
aiogram_template/telegram/middlewares/: __init__.py  database.py  translation.py
aiogram_template/telegram/routers/: __init__.py  base.py  hello_world.py
aiogram_template/translation/: __init__.py  dialogs.py  protocol.py
aiogram_template/translation/langs/en/: hello_world.py
aiogram_template/translation/langs/ru/: hello_world.py
docker/: Dockerfile  docker-entrypoint.sh
