[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = "Template for creating telegram bots"
authors = ["MoxForever <moxforever10@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.11.0"
aiogram-dialog = "^2.1.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
aiohttp = "^3.10.3"
redis = "^5.0.8"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
aiogram-dialog = {extras = ["tools"], version = "^2.1.0"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
